dnl $Id$
dnl 
dnl Process this file with autoconf to produce a configure script.
AC_INIT(cddaread.c)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(aux)


AC_CANONICAL_HOST
HOST_TYPE=$host
AC_DEFINE_UNQUOTED(HOST_TYPE,"$host")



dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET


dnl Checks for libraries.

dnl AC_CHECK_LIB(ds, dsopen, ,[
dnl echo "Cannot find libds."
dnl exit 1
dnl ])


dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h string.h)


dnl Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)



dnl Checks for library functions.
AC_CHECK_FUNCS(getopt_long, break, [GNUGETOPT="getopt.o getopt1.o"])
AC_SUBST(GNUGETOPT)



dnl Own tests

AC_MSG_CHECKING([if libaudiofile supports MPEG-1 audio layers])
AC_CACHE_VAL(cddaread_cv_irix6libaudiofile,
[AC_TRY_COMPILE([
#include <dmedia/audiofile.h> 
],[
void test(void) {
  int test = AF_FILE_MPEG1BITSTREAM;
}],
cddaread_cv_irix6libaudiofile=yes,
cddaread_cv_irix6libaudiofile=no)])

if test $cddaread_cv_irix6libaudiofile = yes; then
  AC_DEFINE(IRIX6)
fi
AC_MSG_RESULT($cddaread_cv_irix6libaudiofile)




AC_OUTPUT(Makefile)


